# voxel-terrain-pd

./: .gitignore  CMakeLists.txt  README.md  build_device_debug.bat  build_device_release.bat  generate_mingw_makefiles.bat  generate_simulator_vs2019.bat
Source/: pdxinfo
include/: bitmap.h  voxel_terrain.h
src/: bitmap.c  main.c  voxel_terrain.c
